# SerialCommunicationProtocol

./: .gitignore  CMakeLists.txt  README.md
cmocka/: CMakeLists.txt  cmocka.c
examples/: readme.md
examples/SCP_uart_example/: CMakeLists.txt  arm-none-eabi-gcc.cmake
examples/SCP_uart_example(cmake)/: .mxproject  SCP_uart_example.ioc  STM32L073RZTx_FLASH.ld  STM32L073RZTx_FLASH.ld.bak
examples/SCP_uart_example(cmake)/Core/Inc/: FreeRTOSConfig.h
examples/SCP_uart_example(cmake)/Core/Src/: main.c
examples/SCP_uart_example(cube)/: .cproject  .project  scp_uart Debug.launch  scp_uart.ioc
examples/SCP_uart_example(cube)/Core/Inc/: SCP.h  stm32l0xx_it.h
examples/SCP_uart_example(cube)/Core/Src/: SCP.c  main.c  main.c.bak  stm32l0xx_hal_msp.c  stm32l0xx_it.c
examples/SCP_uart_example(cube)/Debug/: makefile  objects.list  scp_uart.elf  scp_uart.list  scp_uart.map
examples/SCP_uart_example(cube)/Debug/Core/Src/: SCP.d  SCP.su  freertos.d  main.d  main.su  stm32l0xx_hal_msp.su  stm32l0xx_it.d  subdir.mk
examples/SCP_uart_example(cube)/Debug/Drivers/STM32L0xx_HAL_Driver/Src/: subdir.mk
examples/SCP_uart_example/Core/Src/: stm32l0xx_hal_msp.c  stm32l0xx_it.c
include/: SCP.h
src/: CMakeLists.txt  SCP.c
tests/: CMakeLists.txt  CmockaTest.c  EmptyBufferTest.c  ErrorCheck.c  RandomData_with_SOF.c  RandomData_without_SOF.c  ReadRegister.c  StaticFuncsTest.c  Tests.h  WriteRegister.c
